# BayLearn

./: .coverage  .env.example  .gitignore  BASELINE_INDEX.md  DEVELOPER_GUIDE.md  MANIFEST.in  Makefile  Makefileold  PROJECT_TIMELINE_AND_DOCUMENTATION.md  README.md  SALMA_NASSER_CONTRIBUTION_TIMELINE.md  api.py  baseline_analysis.py  level2_solver.py  main.py  pyproject.toml  requirements.txt  solver.py  ui_app.py
Adaptive-Learning-Module/: .env.example  .gitignore  README.md  Simplified -objective.ipynb  adaptive_agent_v1.py  adaptive_agent_v1_notebook.ipynb  (+22 more)
Equation_Solving_Module/: .gitignore  README.md  pyproject.toml
Equation_Solving_Module/examples/: basic_usage.py
Equation_Solving_Module/src/: __init__.py
Equation_Solving_Module/src/api/: helpers.py  models.py  routes.py
Equation_Solving_Module/src/core/: config.py  parser.py  solver.py
Equation_Solving_Module/src/core/formatting/: __init__.py  latex.py  steps.py
Equation_Solving_Module/src/core/operations/: __init__.py  algebra.py  calculus.py  differential.py  matrix.py
Equation_Solving_Module/src/ui/: app.py  index.html  package-lock.json  package.json
Equation_Solving_Module/src/ui/src/: App.jsx  index.css
Equation_Solving_Module/tests/: test_api_routes.py  test_formatting_latex.py  test_formatting_steps.py  test_operations_algebra.py  test_operations_calculus.py  test_operations_differential.py  test_operations_matrix.py  test_parser.py  test_solver.py
src/: .env.example  .gitignore  BayLearnChat_1.jsx  chunk_staging_buffer.json  chunks_storage.json  contextual_cache.json  evaluation_results.json  main.py  pyproject.toml  rag_experiments.out  rag_experiments.tex.bak  requirements.txt  with_compression.json  without_compression.json
src/baylearn/: __init__.py
src/baylearn-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/baylearn-frontend/src/: App.jsx  App.tsx
src/baylearn/api/: routes.py
src/baylearn/core/: llm_client.py  solver.py
src/baylearn/math_engine/parsing/: schema.py
src/baylearn/math_engine/solver/operations/: algebra.py  limits.py
src/baylearn/ui/: app.py
src/bm25_db/: final_test.pkl  p_4au76z3ixcdc.pkl  p_7aynxl7scmox.pkl  p_doykp88b2yqr.pkl  smoke_test.pkl  test_gen.pkl
src/compressors/: __init__.py  contextual_compressor.py
src/controllers/: __init__.py  _nlp_extraction.py  _nlp_generation.py  _nlp_indexing.py  _nlp_retrieval.py  base.py  data.py  intent_router.py  nlp.py  project.py
src/evaluation/: chatgroqfixed.py  ragas_evaluator.py  test_set.py
src/helpers/: config.py
src/mock/: seed_data.py
src/models/: ProjectModel.py  project.py
src/models/enums/: Response.py  __init__.py
src/parsers/: base_parser.py  pdf_parser.py  unified_content_schema.py
src/repositories/: chunk_repository.py  json_chunk_repository.py
src/routes/: __init__.py  _nlp_handlers.py  base.py  data.py  input_parsing.py  nlp.py  orchestrator.py
src/routes/schemes/: data.py  nlp.py  orchestrator.py
src/services/: input_parsing_adapter.py  processing_service.py
src/stores/: LLMInterface.py
src/stores/LLM/: LLMEnum.py  LLMInterface.py  LLMProviderFactory.py
src/stores/LLM/providers/: GeminiProvider.py  GroqProvider.py  LocalProvider.py
src/stores/bm25/: BM25Interface.py  BM25ProviderFactory.py
src/stores/reranker/: RerankerInterface.py
src/stores/vectordb/: VectorDBEnum.py  VectorDBInterface.py  VectorDBProviderFactory.py  __init__.py
src/stores/vectordb/providers/: QdrantDB.py
src/vector_db/qdrant_db/: meta.json
src/vector_db/qdrant_db/collection/collection_cv_project/: storage.sqlite
src/vector_db/qdrant_db/collection/collection_final_test/: storage.sqlite
src/vector_db/qdrant_db/collection/collection_p_doykp88b2yqr/: storage.sqlite
src/vector_db/qdrant_db/collection/collection_smoke_test/: storage.sqlite
src/vector_db/qdrant_db/collection/collection_test_gen/: storage.sqlite
(+523 files in other folders)
