[tool.poetry]
package-mode = false
name = "miniragapp"
version = "1.0.0"
description = "application for RAG"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.26.0,<2.0.0"
fastapi = ">=0.128.8,<0.136.0"
uvicorn = {extras = ["standard"], version = ">=0.40.0,<0.42.0"}
python-multipart = "^0.0.22"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
aiofiles = "^25.1.0"
llama-cpp-python = "0.3.16"
langchain = ">=0.3.0"
huggingface-hub = ">=0.25.0"
sentence-transformers = ">=2.2.0"
faiss-cpu = "^1.13.2"
qdrant-client = ">=1.17.0,<2.0.0"
packaging = ">=23.2,<25.0"
groq = "0.8.0"
pymupdf = "^1.27.2"
img2table = "^1.4.2"
pillow = "^12.1.1"
ragas = "^0.4.3"
datasets = "^4.7.0"
langchain-groq = ">=0.2.0"
langchain-core = ">=0.3.0"
langchain-community = ">=0.3.0"
httpx = "0.24.1"
langchain-openai = ">=0.2.0"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"